# champ

./: README.md
champ_bringup/launch/: bringup.launch
champ_description/rviz/: urdf_viewer.rviz
champ_gazebo/config/: ros_control_unitree.yaml
lidar_simulator/lidar_description/urdf/: VLP-16.urdf.xacro
lidar_simulator/lidar_gazebo_plugins/src/: GazeboRosLidar.cpp
robots/configs/b1_config/: CMakeLists.txt  package.xml
robots/configs/b1_config/config/gait/: gait.yaml
robots/configs/b1_config/config/joints/: joints.yaml
robots/configs/b1_config/config/links/: links.yaml
robots/configs/b1_config/config/ros_control/: ros_control.yaml
robots/configs/b1_config/launch/: bringup.launch  gazebo.launch
robots/configs/b1_config/worlds/: intech.world  navigation.world
robots/configs/spot_config/config/gait/: gait.yaml
robots/configs/spot_config/launch/: bringup.launch  gazebo.launch
robots/descriptions/b1_description/config/: robot_control.yaml
robots/descriptions/b1_description/xacro/: b1.urdf  gazebo.xacro  robot.xacro
robots/descriptions/spot_ros/spot_description/urdf/: accessories.urdf.xacro  spot.urdf  spot.urdf.xacro  spot_arm.urdf  spot_arm.xacro
