<?xml version="1.0"?>
<package format="2">
  <name>b1_config</name>
  <version>0.1.0</version>
  <description>Unitree B1 Config Package</description>

  <maintainer email="dc4204@nyu.edu">Juan Miguel Jimeno</maintainer>
  <author>Dimitris Chaikalis</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>champ_base</exec_depend>
  
</package>
